--- a/templates/main_page.html.twig
+++ b/templates/main_page.html.twig
@@ -69,14 +69,14 @@
                                </div>
                            </div>
 
-                           <div class="mb-5">
-                               <label for="sleep-quality-input" class="form-label fw-bold">➡️ Sleep Quality</label>
-                               <div class="d-flex w-100 gap-2">
-                                   <input type="range" min="1" max="10" value="5" class="form-control" id="sleep-quality-input" name="sleep_quality" aria-describedby="sleep-quality-help" />
-                                   <output for="sleep-quality-input" id="sleep-quality-range-value" aria-hidden="true"></output>
-                               </div>
-                               <div id="sleep-quality-help" class="form-text">ℹ️ Rate how restful your sleep felt overall.</div>
-                           </div>
+{#                           <div class="mb-5">#}
+{#                               <label for="sleep-quality-input" class="form-label fw-bold">➡️ Sleep Quality</label>#}
+{#                               <div class="d-flex w-100 gap-2">#}
+{#                                   <input type="range" min="1" max="10" value="5" class="form-control" id="sleep-quality-input" name="sleep_quality" aria-describedby="sleep-quality-help" />#}
+{#                                   <output for="sleep-quality-input" id="sleep-quality-range-value" aria-hidden="true"></output>#}
+{#                               </div>#}
+{#                               <div id="sleep-quality-help" class="form-text">ℹ️ Rate how restful your sleep felt overall.</div>#}
+{#                           </div>#}
 
 
                            <div class="mb-5">
@@ -92,10 +92,10 @@
            </div>
 
 
-            <div class="col-5 d-flex justify-content-center app-description-main-div">
+            <div class="col-5 d-flex justify-content-center app-description-main-div text-center">
                 <div>
                     <div>
-                        <img src="{{ asset('assets/images/app-description-image.jpg') }}" class="w-100">
+                        <img src="{{ asset('assets/images/app-description-image.jpg') }}" style="width: 70%">
                     </div>
 
                     <div class="app-description-list-item">🌙 This app helps you gain insights into your sleep quality.</div>
@@ -124,16 +124,16 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.serializeJSON/3.2.1/jquery.serializejson.min.js" integrity="sha512-SdWDXwOhhVS/wWMRlwz3wZu3O5e4lm2/vKK3oD0E5slvGFg/swCYyZmts7+6si8WeJYIUsTrT3KZWWCknSopjg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script>
-    // This is an example script, please modify as needed
-    const rangeInput = document.getElementById('sleep-quality-input');
-    const rangeOutput = document.getElementById('sleep-quality-range-value');
-
-    // Set initial value
-    rangeOutput.textContent = rangeInput.value;
-
-    rangeInput.addEventListener('input', function() {
-        rangeOutput.textContent = this.value;
-    });
+    // // This is an example script, please modify as needed
+    // const rangeInput = document.getElementById('sleep-quality-input');
+    // const rangeOutput = document.getElementById('sleep-quality-range-value');
+    //
+    // // Set initial value
+    // rangeOutput.textContent = rangeInput.value;
+    //
+    // rangeInput.addEventListener('input', function() {
+    //     rangeOutput.textContent = this.value;
+    // });
 
     analyze = () => {
         let responseDiv = $("#response-div");
